--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "multer": "^2.0.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.5",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
+    "uuid": "^9.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
@@ -37,7 +35,9 @@
     "@types/pdf-parse": "^1.1.3",
     "@types/pg": "^8.11.6",
     "@types/multer": "^1.4.11",
-    "@types/uuid": "^10.0.0",
+    "@types/uuid": "^10.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
